force-app/main/default/objects/Ancestry__c/Ancestry__c.object-meta.xml
<CustomObject>
    <label>Ancestry</label>
    <nameField>
        <displayFormat>FT# {0000000}</displayFormat>
        <label>Ancestry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ancestries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>