force-app/main/default/objects/Ancestry__c/fields/Ancestry__c.field-meta.xml
<CustomField>
    <fullName>Ancestry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Ancestry__c</referenceTo>
    <relationshipLabel>Ancestries (Partner)</relationshipLabel>
    <relationshipName>Ancestries1</relationshipName>
    <type>Lookup</type>
</CustomField>