force-app/main/default/objects/Ancestry__c/fields/Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Name__c</fullName>
    <label>Family Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>