force-app/main/default/objects/Ancestry__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <formula
	>Parent__r.First_Name__c &amp; &quot; &quot; &amp; Parent__r.Family_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mother&apos;s Name</label>
    <type>Text</type>
</CustomField>