force-app/main/default/objects/Ancestry__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <formula
	>Ancestry__r.First_Name__c &amp; &quot; &quot; &amp;  Ancestry__r.Family_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner&apos;s Name</label>
    <type>Text</type>
</CustomField>