force-app/main/default/objects/Ancestry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Family_Name__c</columns>
    <columns>Parent__c</columns>
    <columns>Ancestry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>